# C_Server

./: ABOUT.md  Makefile  README.md  configure.ac  main.c  server
include/: camara.h  configGPIO.h  constants.h  doors.h  lights.h
lib/: Makefile.am  camara.c  configGPIO.c  doors.c  httpd.c  lights.c
src/: Makefile.am  doors.c  lights.c  main.c
