lib_LTLIBRARIES = libserver.la
include_HEADERS = $(top_srcdir)/include/camara.h $(top_srcdir)/include/configGPIO.h $(top_srcdir)/include/doors.h $(top_srcdir)/include/httpd.h $(top_srcdir)/include/lights.h $(top_srcdir)/include/constants.h
AM_CPPFLAGS = -I$(top_srcdir)/include
libserver_la_SOURCES = camara.c configGPIO.c doors.c httpd.c lights.c